unpackaged/main/default/objects/SurveySubject/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Survey Subjects</relationshipLabel>
    <relationshipName>Survey_Subjects</relationshipName>
    <type>Lookup</type>
</CustomField>