unpackaged/main/default/objects/SurveySubject/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Survey Subjects</relationshipLabel>
    <relationshipName>Survey_Subjects</relationshipName>
    <type>Lookup</type>
</CustomField>