unpackaged/main/default/objects/SurveySubject/fields/CSR_Name__c.field-meta.xml
<CustomField>
    <fullName>CSR_Name__c</fullName>
    <formula>Case__r.Owner:User.FirstName &amp; &quot; &quot; &amp; LEFT(Case__r.Owner:User.LastName,1) &amp; &quot;.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSR Name</label>
    <type>Text</type>
</CustomField>