unpackaged/main/default/objects/SurveySubject/fields/InvitationLink__c.field-meta.xml
<CustomField>
    <fullName>InvitationLink__c</fullName>
    <label>InvitationLink</label>
    <type>Url</type>
</CustomField>